Move css changes to tutorial-sidebar.less, fix z-index.

--- a/theme/tutorial-sidebar.less
+++ b/theme/tutorial-sidebar.less
@@ -556,6 +556,24 @@
     }
 }
 
+/*********************************
+        Validation
+*********************************/
+.tutorialCodeValidationError {
+    position: fixed;
+    top: unset;
+    right: unset;
+    bottom: 5.5rem;
+    left: 23rem;
+    max-width: 100%;
+    min-width: 18.75rem;
+    padding: 0.625rem 1.625rem;
+    background: @white;
+    box-shadow: 0 0rem 0.5rem;
+    border-radius: 0.5rem;
+    z-index: 40;
+}
+
 /*******************************
         Media Adjustments
 *******************************/
